--- a/src/components/Topbar.astro
+++ b/src/components/Topbar.astro
@@ -1,26 +1,26 @@
 ---
-import { IconSun, IconMoon } from "./generals";
+import { PiMoonStarsDuotone, PiSunDuotone } from 'react-icons/pi';
 
-const btnAppearance = "border-none bg-transparent h-full w-full";
+const btnAppearance = 'border-none bg-transparent h-full w-full';
 ---
 
-<div class="fixed right-6 top-6 z-10 md:!hidden flex">
-  <div class="bubble shadow-[0px_4px_12px_0px_#0000002e]">
+<div class='fixed right-6 top-6 z-10 md:!hidden flex'>
+  <div class='bubble shadow-[0px_4px_12px_0px_#0000002e]'>
     <button
-      id="btnDarkMobile"
-      type="button"
-      title="Button to toogle the dark mode"
+      id='btnDarkMobile'
+      type='button'
+      title='Button to toogle the dark mode'
       class={btnAppearance}
     >
-      <IconMoon height={28} color="#4263eb" />
+      <PiMoonStarsDuotone className='text-p500 text-3xl' />
     </button>
     <button
-      id="btnLightMobile"
-      type="button"
-      title="Button to toogle the light mode"
+      id='btnLightMobile'
+      type='button'
+      title='Button to toogle the light mode'
       class={`${btnAppearance} hidden`}
     >
-      <IconSun height={28} />
+      <PiSunDuotone className='text-yellow-200 text-2xl' />
     </button>
   </div>
 </div>
