--- a/src/components/Knowledges.astro
+++ b/src/components/Knowledges.astro
@@ -1,83 +1,65 @@
 ---
-import "../css/Knowledges.css";
+import '../css/Knowledges.css';
 import {
   IconCSS,
-  IconHTML,
   IconTypescript,
   IconJavascript,
   IconReact,
-  IconCSharp,
-  IconGit,
-} from "./icons/technologies";
+} from './icons/technologies';
 ---
 
-<section class="containerSkills" id="sk">
-  <div class="bgCircles">
-    <article class="circle"></article>
-    <article class="circle"></article>
+<section class='containerSkills' id='sk'>
+  <div class='bgCircles'>
+    <article class='circle'></article>
+    <article class='circle'></article>
   </div>
 
-  <section class="wrapperSkills">
-    <div class="my-8 flex flex-row gap-4 relative">
-      <div class="pocketCardFirstKnowledge"></div>
-      <div class="pocketCardThirdKnowledge"></div>
-      <div class="pocketCardKnowledge">
-        <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="44">
+  <section class='wrapperSkills'>
+    <div class='my-8 flex flex-row gap-4 relative'>
+      <div class='pocketCardFirstKnowledge'></div>
+      <div class='pocketCardThirdKnowledge'></div>
+      <div class='pocketCardKnowledge'>
+        <svg fill='none' viewBox='0 0 24 24' stroke-width='1.5' height='44'>
           <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="m6.75 7.5 3 2.25-3 2.25m4.5 0h3m-9 8.25h13.5A2.25 2.25 0 0 0 21 18V6a2.25 2.25 0 0 0-2.25-2.25H5.25A2.25 2.25 0 0 0 3 6v12a2.25 2.25 0 0 0 2.25 2.25Z"
+            stroke-linecap='round'
+            stroke-linejoin='round'
+            d='m6.75 7.5 3 2.25-3 2.25m4.5 0h3m-9 8.25h13.5A2.25 2.25 0 0 0 21 18V6a2.25 2.25 0 0 0-2.25-2.25H5.25A2.25 2.25 0 0 0 3 6v12a2.25 2.25 0 0 0 2.25 2.25Z'
           ></path>
         </svg>
       </div>
     </div>
-    <h1 class="knowledges-h1">
-      Some of my main <span style="text-decoration: underline"
+    <h1 class='knowledges-h1'>
+      Some of my main <span style='text-decoration: underline'
         >technologies</span
       >.
     </h1>
 
-    <main class="skills">
-      <article class="skill">
+    <main class='skills'>
+      <article class='skill'>
         <div>
-          <IconJavascript height="72" />
+          <IconJavascript height='72' />
           JavaScript
         </div>
 
         <div>
-          <IconTypescript height="72" />
+          <IconTypescript height='72' />
           TypeScript
         </div>
 
         <div>
-          <IconCSS height="72" } />
+          <IconCSS height='72' } />
           CSS
-        </div>
-
-        <div>
-          <IconHTML height="72" />
-          HTML
         </div>
       </article>
 
-      <article class="skill">
+      <article class='skill'>
         <div>
-          <IconReact height="68" />
+          <IconReact height='68' />
           React
         </div>
         <div>
-          <IconReact height="68" />
+          <IconReact height='68' />
           React Native
-        </div>
-
-        <div>
-          <IconGit height="70" />
-          Git
-        </div>
-
-        <div>
-          <IconCSharp height="72" />
-          C# & .NET
         </div>
       </article>
     </main>
