--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+@tailwind utilities;
+
+@layer utilities {
+	.maskProjectsTitle {
+		background: radial-gradient(circle farthest-corner at center center, #c0bebe 0%, #fff 44%);
+		-webkit-background-clip: text;
+		background-clip: text;
+		-webkit-text-fill-color: transparent;
+		color: transparent;
+	}
+
+	.maskProjectsTitleDark {
+		background: radial-gradient(circle farthest-corner at center center, #545454 0%, #181818 34%);
+		-webkit-background-clip: text;
+		background-clip: text;
+		-webkit-text-fill-color: transparent;
+		color: transparent;
+	}
+}
+
 :root {
 	--mainColor: #4263eb;
 	--bg: #f2f2f7;
